--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/edstevo/laravel-vue-form/issues"
   },
-  "homepage": "https://github.com/edstevo/laravel-vue-form#readme"
+  "homepage": "https://github.com/edstevo/laravel-vue-form#readme",
+  "dependencies": {
+    "axios": "^0.15.3",
+    "lodash": "^4.17.4"
+  }
 }
