add submitting variable

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forms",
+  "name": "laravel-vue-form",
   "version": "1.0.0",
   "description": "As Per Jeffrey Way @Laracasts, Vue Form wrapper",
   "main": "forms.js",
