--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/edstevo/laravel-vue-form#readme",
   "dependencies": {
     "axios": "^0.15.3",
+    "jquery": "^3.1.1",
     "lodash": "^4.17.4"
   }
 }
